--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -20,6 +20,15 @@
       <h3>Marken Burger was founded by Matheiu Perdido in 2010 that offers customers pre-made combo meals, or the user can create their own. The objective is to offer high-quality burgers at a lower cost and the goal is to compete using ghost or cloud kitchens and conducting all operations online. </h3>
     </div>
 
+
+    <div class="company-information">
+      <h2>Company Information</h2>
+      <img src="assets/img/location.jpg">
+      <h3><span>Company Address: </span>Penthouse 1, One Corporate Center Meralco Ave cor Julia Vargas Ave, Ortigas Center, Pasig, 1605 Metro Manila</h3>
+      <h3><span>Company Phone: </span>#245-8874</h3>
+      <h3><span>Email: </span>support@markenburgers.coms</h3>
+    </div>
+
     <div class="company-founders">
       <h2>The Company Founding Members</h2>
 
@@ -119,13 +128,6 @@
       </ion-grid>
     </div>
 
-
-    <div class="company-information">
-      <h2>Company Information</h2>
-      <h3><span>Company Address: </span>Penthouse 1, One Corporate Center Meralco Ave cor Julia Vargas Ave, Ortigas Center, Pasig, 1605 Metro Manila</h3>
-      <h3><span>Company Phone: </span>#245-8874</h3>
-      <h3><span>Email: </span>support@markenburgers.coms</h3>
-    </div>
 
 
   </div>
