--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,9 +30,10 @@
 .home-bg-img{
   position: absolute;
   z-index:-1;
-  // height:400px;
+  height:350px;
   background: black;
   width: 100%;
+  object-fit: cover;
 }
 
 .bg-tint{
@@ -47,11 +48,31 @@
   // border-radius: 10px;
 }
 
+.header-logo{
+  margin-bottom: -120px;
+  margin-top: -160px;
+
+    img{
+      width: 100%;
+      height: 70%;
+    }
+}
+
+.header-logo{
+  margin-top: -40px;
+  height: 250px;
+  width: 200px;
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .main-content-title{
   font-family: Ubuntu !important;
   font-weight: 1000;
   font-size: 38px;
   color: white;
+  margin-top: 45px;
 }
 
 .main-content-text{
@@ -59,6 +80,7 @@
   font-size:20px;
   color:white;
   margin-top:5px;
+  margin-bottom: -20px;
   font-weight: 900;
   text-shadow: 0.5px 0.5px black;
 }
@@ -71,6 +93,7 @@
   font-family: Ubuntu !important;
   font-size: 22px;
   margin:20px;
+  margin-top: -25px;
 
 }
 
@@ -112,4 +135,31 @@
   }
 
 
+}
+.homepage-card-above{
+  color: #FFBF00;
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.homepage-card-outline{
+  background: #171717;
+  margin-bottom: 5px;;
+  margin-top: 0px;
+}
+
+.homepage-card-image{
+  width: 90%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.homepage-card-content{
+  color: white;
+  font-size: 19px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 15px;
 }
