--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,12 @@
           </ion-item>
         </ion-menu-toggle>
 
- <!---  <ion-menu-toggle>
+        <ion-menu-toggle>
           <ion-item>
             <ion-icon name="compass" slot="start"></ion-icon>
             <span class="nav-title">Track</span>
           </ion-item>
-        </ion-menu-toggle>-->
+        </ion-menu-toggle>
 
         <ion-menu-toggle>
           <ion-item [routerLink]="['/contact']">
