--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item>
+          <ion-item [routerLink]="['/track']">
             <ion-icon name="compass" slot="start"></ion-icon>
             <span class="nav-title">Track</span>
           </ion-item>
