--- a/src/app/track/track.page.html
+++ b/src/app/track/track.page.html
@@ -22,10 +22,10 @@
       <h3 class="email-instruction">Track your order in one place and never miss a delivery again</h3>
       <!--SENDER NAME-->
       <h4 class="form-sub">Order ID:</h4>
-      <input type="text" formControlName="senderName" class="input-txt" autocomplete="off"
+      <input type="text" formControlName="orderID" class="input-txt" autocomplete="off"
       placeholder="Enter your Order ID">
-      <div *ngIf="TrackForm.get('senderName').invalid && TrackForm.get('senderName').touched">
-        <p *ngIf="TrackForm.get('senderName').errors?.required" class="form-err-msg">Order ID is required</p>
+      <div *ngIf="TrackForm.get('orderID').invalid && TrackForm.get('orderID').touched">
+        <p *ngIf="TrackForm.get('orderID').errors?.required" class="form-err-msg">Order ID is required</p>
       </div>
   
   
@@ -39,9 +39,10 @@
 
     <div class="track-result">
       <div class="title-contact">The status of your order is</div>
-      <h2 class="title-sub"><span>Status:</span> On Going</h2>
-      <h2 class="title-sub"><span>Total Paid:</span></h2>
-      <h2 class="title-sub"><span>Order Summary:</span></h2>
+      <h2 class="title-sub"><span>Status:</span> {{orderDetails.orderStatus
+      }}</h2>
+      <h2 class="title-sub"><span>Price to be Paid:</span> {{orderDetails.orderPrice}}</h2>
+      <h2 class="title-sub"><span>Order Summary:</span> <div [innerHTML]="orderDescription"></div></h2>
     </div>
 
 </ion-content>
