--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -85,7 +85,7 @@
           </div>
           <img class="homepage-card-image" src="assets/img/burger-builder.jpg">
           <div class="homepage-card-content ion-text-left">
-            The burger made by Antone Cooper was chosen as the Best Burger of the Month and consists of beef patty, pepper jack cheese, onion, and special sauce.
+            The burger made by Antone Cooper was chosen as the Best Burger of the Month and consists of beef patty, cheese, onion, and special sauce.
           </div>
 
         </div>
