--- a/src/app/about/about.page.scss
+++ b/src/app/about/about.page.scss
@@ -1,3 +1,11 @@
+ion-toolbar{
+    --background: var(--color-3);
+  }
+  
+  ion-menu-button{
+    color: white;
+} 
+
 .header-bg{
     z-index: -2;
 
@@ -31,7 +39,7 @@
     font-family: Ubuntu !important;
     font-size: 22px;
     margin: 0px auto;
-    margin-top: 100px;
+    margin-top: 20px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, 
                 rgba(0, 0, 0, 0.07) 0px 2px 4px,
                 rgba(0, 0, 0, 0.07) 0px 4px 8px, 
