--- a/src/app/cart-modal/cart-modal.page.html
+++ b/src/app/cart-modal/cart-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <h5 slot="end" (click)="closeCart()" style="margin: 0; color: var(--color-2);">Close</h5>
+    <h5 slot="end" (click)="closeCart()" style="margin: 0; color: var(--color-2); margin-right: 15px;">Close</h5>
   </ion-toolbar>
 </ion-header>
 
