--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -16,6 +16,7 @@ ion-menu-button{
         position: absolute;
         z-index: -1;
         margin-top: -20px;
+        filter: brightness(50%);
     }
 
     h2{
@@ -73,6 +74,7 @@ ion-menu-button{
 
 .name-input, .email-input{
     background-color: white;
+    color: black;
     border-radius: 10px;
     width: 90%;
     height: 40px;
@@ -83,6 +85,7 @@ ion-menu-button{
 
 .message-input{
     background-color: white;
+    color: black;
     border-radius: 10px;
     width: 90%;
     height: 120px;
