--- a/src/app/track/track.page.scss
+++ b/src/app/track/track.page.scss
@@ -16,6 +16,7 @@ ion-toolbar{
         position: absolute;
         z-index: -1;
         margin-top: -20px;
+        filter: brightness(50%);
     }
 
     h2{
